          (thanks to Benedikt Fein)
- #540    reports should end at current time if a task is still running
          (thanks to Ankur Sinha)
- #547    AtomicFile: Operate on the target of symlinks
          (thanks to Shaun Ruffel, Ivo Forlin)
- #551    Add retag command
          (thanks to Iúri Archer)
- #552    Extend XDG support to macOS
          (thanks to Tadeas Uhlir)
- #554    Update documentation for command 'retag'
          (thanks to quazgar)
-         Use local man pages in tests
          (thanks to Maxim Beder)
-         Cleanup CMake files
-         Update project to C++17

------ current release ---------------------------

1.5.0 (2023-04-04) - 51e7c2c772837bbd6d56da8d16506c4b6de8644166e0b5234ad36ae6a70dd4f6

- #361    Improve documentation
          (thanks to xeruf)
- #389    Extend summary configuration
          (thanks to Davide Crucitti)
- #489    First execution creates database regardless of confirmation response
          (thanks to Rafael Oliveira)
- #403    Remove incorrect output stating that an empty interval was recorded
          (thanks to xeruf)
- #406    Clarify minimal value for 'epoch' as date value
          (thanks to Daniel Hornung)
- #408    Update documentation of hint `:all`
          (thanks to quazgar)
- #437    Minor AtomicFile cleanup
          (thanks to Shaun Ruffel)
- #439    Show error message if command track is called with an id
- #441    Return report return code
          (thanks to lospatchos)
- #444    Improve documentation on annotations
          (thanks to apkawel, Shaun Ruffel)
- #450    Report 'totals.py' does not display data when no time range specified
          (thanks to squirrellyDave)
- #458    Add man documentation for configuring tag colors.
          (thanks to Lim Ding Wen)
- #463    Add colors to summary
          (thanks to Lim Ding Wen)
- #466    Ignore empty exclusion ranges
- #468    Refactor interval filtering
- #469    Do not leak IntervalFilters in IntervalFilterAndGroup