@@ -117,3 +117,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   apkawel
   Leon Grünewald
   Ivo Forlin
+  aMOPel
