@@ -32,17 +32,18 @@ set (PACKAGE_STRING "${PACKAGE} ${VERSION}")
 string (TIMESTAMP PACKAGE_DATE "%Y-%m-%d")
 
 if (FREEBSD OR DRAGONFLY)
-set (TIMEW_MANDIR  man      CACHE STRING "Installation directory for man pages")
-set (TIMEW_MAN1DIR man/man1 CACHE STRING "Installation directory for man pages, section 1")
-set (TIMEW_MAN5DIR man/man5 CACHE STRING "Installation directory for man pages, section 5")
-set (TIMEW_MAN7DIR man/man7 CACHE STRING "Installation directory for man pages, section 7")
+  set (TIMEW_MANDIR  man                  CACHE STRING "Installation directory for man pages")
+  set (TIMEW_MAN1DIR ${TIMEW_MANDIR}/man1 CACHE STRING "Installation directory for man pages, section 1")
+  set (TIMEW_MAN5DIR ${TIMEW_MANDIR}/man5 CACHE STRING "Installation directory for man pages, section 5")
+  set (TIMEW_MAN7DIR ${TIMEW_MANDIR}/man7 CACHE STRING "Installation directory for man pages, section 7")
 else (FREEBSD OR DRAGONFLY)
-set (TIMEW_MANDIR  share/man      CACHE STRING "Installation directory for man pages")
-set (TIMEW_MAN1DIR share/man/man1 CACHE STRING "Installation directory for man pages, section 1")
-set (TIMEW_MAN5DIR share/man/man5 CACHE STRING "Installation directory for man pages, section 5")
-set (TIMEW_MAN7DIR share/man/man7 CACHE STRING "Installation directory for man pages, section 7")
+  set (TIMEW_MANDIR  share/man            CACHE STRING "Installation directory for man pages")
+  set (TIMEW_MAN1DIR ${TIMEW_MANDIR}/man1 CACHE STRING "Installation directory for man pages, section 1")
+  set (TIMEW_MAN5DIR ${TIMEW_MANDIR}/man5 CACHE STRING "Installation directory for man pages, section 5")
+  set (TIMEW_MAN7DIR ${TIMEW_MANDIR}/man7 CACHE STRING "Installation directory for man pages, section 7")
 endif (FREEBSD OR DRAGONFLY)
-set (TIMEW_DOCDIR  share/doc/timew CACHE STRING "Installation directory for doc files")
+set (TIMEW_DOCDIR share/doc/timew CACHE STRING "Installation directory for doc files")
+set (TIMEW_BINDIR bin             CACHE STRING "Installation directory for Timewarrior executable")
 
 message ("-- Configuring cmake.h")
 configure_file (${CMAKE_SOURCE_DIR}/cmake.h.in
@@ -58,7 +59,7 @@ endif (EXISTS ${CMAKE_SOURCE_DIR}/test)
 
 set (doc_FILES ChangeLog README.md INSTALL AUTHORS LICENSE)
 foreach (doc_FILE ${doc_FILES})
-  install (FILES ${doc_FILE}  DESTINATION ${TIMEW_DOCDIR})
+  install (FILES ${doc_FILE} DESTINATION ${TIMEW_DOCDIR})
 endforeach (doc_FILE)
 
 # ---
